--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^1.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
