Deploy/Public Fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vrezn0v.github.io/Marked",
+  "homepage": "https://markdown.rzwshre.xyz",
   "name": "marked",
   "version": "0.1.0",
   "private": true,
